test/expected/set_nodigraphs.out
cdecl> set nodigraphs
           ^
5: error: "no" not valid for "digraphs"
